k8s/overlays/dev/patch-replicas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-frontend
  labels:
    app: school-frontend
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-deployment
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-deployment
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teacher-deployment
spec:
  replicas: 1
